h2. Wukong v.14.11 2010-07-30

* added the @max_(maps|reduces)_per_(node|cluster)@ jobconfs.
* added jobconfs for io_job_mb and friends.
* added a loadable module to convert output data to pig bags and tuples
* pulled in several methods from active_support, incl. Enumerable#sum
* Scripts to find percentile rank of elements in a dataset
* We are starting to move wukong to a model where streaming is from a generic
  source into a generic sink. Several stores have been landed in the code, but
  many are in a half- or un-baked state. Please ignore this for the moment.

h2. Wukong v1.4.8 2010-06-05

* made scripts inject a helpful job name using mapred.job.name
* Hash.compact_blank! and HashLike.compact_blank! -- eliminate all key-values whoes value is blank?

h2. Wukong v1.4.8 2010-05-17

* Bug in passing commandline args down to map and reduce child processes

h2. Wukong v1.4.7 2010-03-05

Lots more examples:
* examples/stats/avg_value_frequency.rb does an Average Value Frequency histogram
* examples/server_logs has a quite useful apache log file parser
* Made the base streamer use each_record, opening the door for alternative record injection (eg Datamapper!)
* wukong/streamer/counting_reducer.rb is an um reducer and it counts things.

h2. Wukong v1.4.6 2010-01-26

* A HELLA AWESOME working example from retail web analytics by @lenbust

h2. Wukong v1.4.5 2010-01-18

* In @--run=local@ mode, you can use '-' alone as a filename to indicate STDIN / STDOUT as input/output respectively.
* Minor tweaks to contrib/jeans

h2. Wukong v1.4.4 2010-01-15

* Moved settings management & command line handling over to "Configliere":http://github.com/mrflip/configliere (
* Added "example script and notes":http://github.com/fredrikmollerstrand/hackblag/blob/master/wukong/notes.markdown from Fredrik Möllerstrand (@lenbust)